openstack-dashboard/dashboard/static/dashboard/css/style.css
/* ... */
body {
  background: url(../images/content_bg.png) top left repeat-y;
  font: 16px/21px anivers, helvetica, arial, sans-serif ;
  color: #989898;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
}

a {
  text-decoration: none;
  color: #3fb9d3;
}
a:hover { text-decoration: underline; }

input[type="text"], input[type="password"], textarea{
  height: 33px;
  margin: 0 0 15px -1px;
  padding: 0 0 0 10px;
  float: left;
  border: 1px solid #ccc;
}

textarea{ padding: 10px 0 0 10px; }

small { font-size: 12px; }

ul, li {
  margin: 0;
  padding: 0;
  list-style: none;
}

li.last { border-right: none !important; }

.small-rounded {
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.large-rounded {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

input[type="submit"] {
  background: url(../images/modal_btn.png) top left repeat-x;
  color: #6a6a6a;
  font-size: 14px;
  text-align: center;
  width: 82px;
  height: 15px;
  padding: 10px 10px 10px 10px;
  float: right;
  border: 1px solid #dcdcdc;
}

input[type="submit"]:hover {
  background-position: 0 -35px;
  text-decoration: underline;
}
input[type="submit"]:active { background-position: 0 -105px; }

.clear { clear: both; }

#main a.action_link, #main input.action_input {
  background: #93bc8d;
  color: #fff;
  font-size: 14px;
  margin: 0 17px 0 0;
  padding: 10px 10px 10px 10px;
  border: 1px solid #8eb08a;
  -webkit-transition-property: background;
  -webkit-transition-duration: 0.2s;
  text-shadow: #62935c 0 -1px 0;
}

#main a.action_link:hover, #main input.action_input:hover {
  background: #6fa267;
  text-decoration: none;
}

#main input.action_input {
  height: auto;
  width: auto;
  float: left;
  margin-bottom: 25px;
  cursor: pointer;
  font-size: 12px !important;

}


/* Header */

#header {
  background: #000;
  font-family: "Helvetica", arial, sans-serif;
  min-width: 1024px;
  width: 100%;
  height: 45px;
  float: left;
}

h1 {
  margin: -3px 0 0 15px;
  float: left;
}

h1 a{
  background: url(../images/logo_new.png) no-repeat left !important;
  text-indent: -9999px;
  width: 115px;
  float: left;
  display: block;
}

#main_nav {
  background-color: #f3f8fa;
  text-transform: uppercase;
  min-width: 800px;
  width: 84%;
  padding: 10px 0 0;
  float: left;
  border: 1px solid #cbe0e8;
}

#main_nav li {
  margin: 0 20px 0 0;
  float: left;
}

#main_nav li a {
  color: #8eacb7;
  font-size: 12px;
  margin: -10px 0 0 0;
  padding: 5px 10px 0;
  float: left;
  display: block;
  position: relative;
  border-top: 5px solid transparent;
  height: 33px;
}
#main_nav li a.active { border-top: 5px solid #8eacb7; }
#main_nav li a:hover { background-color: #dff2fa; }


/* Tenant Dropdown */

#user_bar {
  background: #f3faf3;
  font: 12px "Helvetica", arial, sans-serif;
  width: 16%;
  min-width: 210px;
  height: 38px;
  margin: -45px 0 0 0;
  padding: 5px 0 0 0;
  float: right;
  border: 1px solid #d6e4d9;
}

#user_bar ul {
  background: #c9ead1;
  min-width: 210px;
  width: 16%;
  margin: 37px 0 0 0;
  padding: 12px 0 0 0;
  display: none;
  position: absolute;
  right: 0px;
  border: 1px solid #d6e4d9;
}

#drop_btn {
  background: #c9ead1 url(../images/drop_arrow.png) no-repeat center center;
  margin: -5px 0 0 0;
  padding: 12px 0 0 0;
  width: 25px;
  height: 29px;
  float: right;
  border: 1px solid #d6e4d9;
  text-indent: -9999px;
}
#drop_btn:hover { background-color: #bfdec6; }

#settings_btn {
  background-image: url(../images/gears_small.png);
  background-repeat: no-repeat;
  background-position: center top;
  width: 23px;
  height: 29px;
}
#settings_btn:hover {
  background-color: #bfdec6;
  text-decoration: none;
}

a#current_tenant {
  background: #f3faf3;
  color: #6eaf6e;
  width: 80%;
  padding: 0 0 0 10px;
  float: left;
  display: block;
  position: relative;
}

#current_tenant h4 {
  font-size: 16px;
  font-weight: bold;
  text-align: left;
  margin: 3px 0 -4px;
}

#user_bar li a {
  color: #5c935c;
  font: 14px;
  padding: 5px 0 5px 20px;
  display: block;
  border-bottom: 1px solid #a9deb6;
}
#user_bar li a:hover{ background: #9dd1a9; }

li#sign_out a {
  background: #e3f3e7;
  font-size: 11px;
  padding: 5px 0 5px 20px;
}
li#sign_out a:hover { color: #406640; }

li.title h4{
  color: #7ab789;
  font-size: 10px;
  text-transform: uppercase;
  margin: -4px 0 0 0;
  padding: 0 0 5px 10px;
  border-bottom: 1px dotted #7ab789;
}


/* Sidebar */

#sidebar {
  margin: 0 9px 0 20px;
  float: left;
}

#sidebar h3 {
  color: #6a6a6a;
  font: 18px;
  margin: 30px 0 15px 0;
  float: left;
}

#sidebar .sub_nav { width: 200px; }

#sidebar .sub_nav a {
  color: #999;
  width: 188px;
  padding: 10px 10px 10px 10px;
  float: left;
}

#sidebar .sub_nav a.active {
  background: #fff;
  border: 1px solid #e1e1e1;
  border-right: 0;
  border-bottom-color: #ccc;
}


/* Page Header */

#page_header {
  background: #f2f2f2;
  height: 31px;
  margin: 0 0 0 229px;
  padding: 17px 0 18px 20px;
  display: block;
  border-bottom: 1px solid #e5e5e5;
}

#page_header h2 {
  color: #a3a3a3;
  font-size: 30px;
  margin: 5px 0 0 0;
  float: left;
}
#page_header h2 span { color: #6a6a6a; }

#page_header .right {
  float: right;
  margin-right: 20px;
}

#page_header .search { float: left; }

.search form label {
  background: #fff url(../images/search.png) no-repeat 10px;
  text-indent: -9999px;
  width: 16px;
  height: 16px;
  padding: 17px 21px 0 0;
  float: left;
  display: block;
  border: 1px solid #ccc;
}

a.refresh  {
  background: url(../images/refresh.png) top left no-repeat;
  text-indent: -9999px;
  width: 24px;
  height: 24px;
  margin: 8px 0 0 20px;
  float: left;
  display: block;
  cursor: pointer;
}
a.refresh:hover { background-position: left -24px; }

a.refresh.refreshing {
  background: url(../images/spinner.gif) top left no-repeat;
}

input.refreshOption {
    margin: 10px 0 0 0;
    float: right;
    clear: both;
}
/* ... */

